--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@types/node": "^14.14.22",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "ts-loader": "^8.0.14",
+        "typescript": "^4.1.3"
     }
 }
