--- a/package.json
+++ b/package.json
@@ -28,6 +28,15 @@
         "@types/node": "^14.14.22",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "connected-react-router": "^6.8.0",
+        "history": "^5.0.0",
+        "react-redux": "^7.2.2",
+        "react-router": "^5.2.0",
+        "redux": "^4.0.5",
+        "redux-actions": "^2.6.5",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0",
         "ts-loader": "^8.0.14",
         "typescript": "^4.1.3"
     }
