--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "@types/react-redux": "^7.1.16",
+        "@types/react-router": "^5.1.11",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
@@ -30,7 +31,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "connected-react-router": "^6.8.0",
-        "history": "^5.0.0",
+        "history": "^4.10.1",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
         "redux": "^4.0.5",
